added `glpsol` executable target plus tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,12 @@
 add_library(GLPK)
+add_executable(GLPSOL)
 target_sources(GLPK PRIVATE glpk.h)
+target_sources(GLPSOL
+    PRIVATE
+        ../examples/glpsol.c
+    PRIVATE
+        glpk.h
+)
 add_subdirectory(amd)
 add_subdirectory(api)
 add_subdirectory(bflib)
@@ -42,6 +49,45 @@ target_link_libraries(GLPK
   $<$<NOT:$<C_COMPILER_ID:MSVC>>:m>)
 add_library(${PROJECT_NAMESPACE}::GLPK ALIAS GLPK)
 
+target_include_directories(GLPSOL
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/amd>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/api>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/bflib>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/colamd>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/draft>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/env>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/intopt>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/minisat>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/misc>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/mpl>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/npp>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/proxy>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/simplex>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/zlib>
+        $<INSTALL_INTERFACE:include>)
+target_compile_features(GLPSOL PUBLIC c_std_11)
+set_target_properties(GLPSOL PROPERTIES
+        VERSION ${PROJECT_VERSION}
+        PUBLIC_HEADER glpk.h) # not sure about this one
+target_link_libraries(GLPSOL
+        PRIVATE
+        $<$<NOT:$<C_COMPILER_ID:MSVC>>:m>)
+add_executable(${PROJECT_NAMESPACE}::GLPSOL ALIAS GLPSOL)
+add_test(
+    NAME
+        glpsol_version
+    COMMAND
+       GLPSOL  --version
+)
+add_test(
+    NAME
+        glpsol_solve
+    COMMAND
+        GLPSOL --mps ${CMAKE_SOURCE_DIR}/examples/murtagh.mps --max
+)
+
 # check system libs functions and headers
 # m::exp
 include(CheckSymbolExists)
@@ -52,6 +98,7 @@ if(NOT HAVE_EXP)
     check_symbol_exists(exp "math.h" HAVE_EXP)
     if(HAVE_EXP)
         target_link_libraries(GLPK PRIVATE m)
+        target_link_libraries(GLPSOL PRIVATE m)
     else()
         message(FATAL_ERROR "exp function not found")
     endif()
