--- a/src/mpl/CMakeLists.txt
+++ b/src/mpl/CMakeLists.txt
@@ -10,3 +10,16 @@ target_sources(GLPK
     mplsql.c
     mplsql.h
 )
+
+target_sources(GLPSOL
+    PRIVATE
+        mpl1.c
+        mpl2.c
+        mpl3.c
+        mpl4.c
+        mpl5.c
+        mpl6.c
+        mpl.h
+        mplsql.c
+        mplsql.h
+)
