--- a/src/proxy/CMakeLists.txt
+++ b/src/proxy/CMakeLists.txt
@@ -5,3 +5,10 @@ target_sources(GLPK
     proxy.c
     proxy.h
 )
+
+target_sources(GLPSOL
+    PRIVATE
+        proxy1.c
+        proxy.c
+        proxy.h
+)
