--- a/src/zlib/CMakeLists.txt
+++ b/src/zlib/CMakeLists.txt
@@ -28,3 +28,34 @@ target_sources(GLPK
     zutil.c
     zutil.h
 )
+
+target_sources(GLPSOL
+    PRIVATE
+        adler32.c
+        compress.c
+        crc32.c
+        crc32.h
+        deflate.c
+        deflate.h
+        gzclose.c
+        gzguts.h
+        gzlib.c
+        gzread.c
+        gzwrite.c
+        inffast.c
+        inffast.h
+        inffixed.h
+        inflate.c
+        inflate.h
+        inftrees.c
+        inftrees.h
+        trees.c
+        trees.h
+        uncompr.c
+        zconf.h
+        zio.c
+        zio.h
+        zlib.h
+        zutil.c
+        zutil.h
+)
