fixed copy-paste code errors, added missing `GPSOL` target include dirs/link libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,11 +101,13 @@ if(ODBC)
     else()
       message(FATAL_ERROR "Could not run 'odbc-config --cflags' or 'iodbc-config --cflags'")
     endif()
-    string(REGEX MATCH "/[^/\\]+$/gm" GMP_LIB_NAME "${GMP_LIBRARIES}") # regexr.com/698ls strips the preceding path from the actual lib name
+    string(REGEX MATCH "/[^/\\]+$/gm" ODBC_LIB_NAME "${ODBC_LIBRARIES}") # regexr.com/698ls strips the preceding path from the actual lib name
     if (GMP_LIB_NAME)
-      add_compile_definitions(ODBC_DLNAME=${GMP_LIB_NAME})
-      target_link_libraries(GLPK GMP_LIBRARIES)
-      target_include_directories(GLPK GMP_INCLUDE_DIRS)
+      add_compile_definitions(ODBC_DLNAME=${ODBC_LIB_NAME})
+      target_link_libraries(GLPK ODBC_LIBRARIES)
+      target_include_directories(GLPK ODBC_INCLUDE_DIRS)
+      target_link_libraries(GLPSOL ODBC_LIBRARIES)
+      target_include_directories(GLPSOL ODBC_INCLUDE_DIRS)
     else()
       message(FATAL_ERROR "Could not determine ODBC/iODBC library name")
     endif()
@@ -115,7 +117,7 @@ if(ODBC)
 endif()
 
 include(CMakeDependentOption)
-cmake_dependent_option(MYSQL "enable MathProg MySQL support" OFF "SHARED_LIB" OFF)
+cmake_dependent_option(MYSQL "enable MathProg MySQL support" OFF "BUILD_SHARED_LIBS" OFF)
 if(MYSQL)
   find_package(MySQL)
   if(MYSQL_FOUND)
