switched to dune-common version of `FindGMP.cmake`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,12 +71,12 @@ option(BUILD_EXAMPLES "Build examples" ON)
 message(STATUS "Build examples: ${BUILD_EXAMPLES}")
 add_subdirectory(examples)
 
-option(WITH_GMP "use GNU MP bignum library" OFF)
+include(CMakeDependentOption)
+cmake_dependent_option(WITH_GMP "use GNU MP bignum library" ON "NOT MSVC" OFF)
 if(WITH_GMP)
   find_package(GMP)
   if(GMP_FOUND)
-    target_include_directories(GLPK GMP_INCLUDE_DIRS)
-    target_link_libraries(GLPK GMP_LIBRARIES)
+    target_link_libraries(GLPK GMP::gmp)
   else()
     message(FATAL_ERROR "gmp.h/libgmp not found")
   endif()
@@ -116,7 +116,6 @@ if(ODBC)
   endif()
 endif()
 
-include(CMakeDependentOption)
 cmake_dependent_option(MYSQL "enable MathProg MySQL support" OFF "BUILD_SHARED_LIBS" OFF)
 if(MYSQL)
   find_package(MySQL)
