--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,8 @@ cmake_dependent_option(WITH_GMP "use GNU MP bignum library" ON "NOT MSVC" OFF)
 if(WITH_GMP)
   find_package(GMP)
   if(GMP_FOUND)
-    target_link_libraries(GLPK GMP::gmp)
+    target_link_libraries(GLPK GMP_LIBRARIES)
+    target_include_directories(GLPK GMP_INCLUDE_DIRS)
   else()
     message(FATAL_ERROR "gmp.h/libgmp not found")
   endif()
