Fixed `target_link_libraries` not working on *nix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ cmake_dependent_option(WITH_GMP "use GNU MP bignum library" ON "NOT MSVC" OFF)
 if(WITH_GMP)
   find_package(GMP)
   if(GMP_FOUND)
-    target_link_libraries(GLPK GMP::gmp)
+    target_link_libraries(GLPK PRIVATE GMP::gmp)
   else()
     message(FATAL_ERROR "gmp.h/libgmp not found")
   endif()
