--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,8 +71,11 @@ option(BUILD_EXAMPLES "Build examples" ON)
 message(STATUS "Build examples: ${BUILD_EXAMPLES}")
 add_subdirectory(examples)
 
-include(CMakeDependentOption)
-cmake_dependent_option(WITH_GMP "use GNU MP bignum library" ON "NOT MSVC" OFF)
+if (UNIX)
+  option(WITH_GMP "use GNU MP bignum library" ON)
+else() # default to off on non-unix
+  option(WITH_GMP "use GNU MP bignum library" OFF)
+endif()
 if(WITH_GMP)
   find_package(GMP)
   if(GMP_FOUND)
@@ -114,6 +117,7 @@ if(ODBC)
   endif()
 endif()
 
+include(CMakeDependentOption)
 cmake_dependent_option(MYSQL "enable MathProg MySQL support" OFF "BUILD_SHARED_LIBS" OFF)
 if(MYSQL)
   find_package(MySQL)
