changed `add_compile_definitions` to `target_compile_definitions` as the definition weren't found during compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ if(ODBC)
     endif()
     string(REGEX MATCH "/[^/\\]+$/gm" ODBC_LIB_NAME "${ODBC_LIBRARIES}") # regexr.com/698ls strips the preceding path from the actual lib name
     if (GMP_LIB_NAME)
-      add_compile_definitions(ODBC_DLNAME=${ODBC_LIB_NAME})
+      target_compile_definitions(GLPK PUBLIC ODBC_DLNAME=${ODBC_LIB_NAME})
       target_link_libraries(GLPK ODBC_LIBRARIES)
       target_include_directories(GLPK ODBC_INCLUDE_DIRS)
     else()
@@ -142,5 +142,5 @@ if(IS_REENTRANT)
   else()
     set(TLS "_Thread_local") # default to C11 standard, may break some builds if thread local storage isn't supported
   endif()
-  add_compile_definitions(TLS=${TLS})
+  target_compile_definitions(GLPK PUBLIC TLS=${TLS})
 endif()
