CMake will now always try to find libgmp, but will warn and continue if not found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,18 +71,11 @@ option(BUILD_EXAMPLES "Build examples" ON)
 message(STATUS "Build examples: ${BUILD_EXAMPLES}")
 add_subdirectory(examples)
 
-if (UNIX)
-  option(WITH_GMP "use GNU MP bignum library" ON)
-else() # default to off on non-unix
-  option(WITH_GMP "use GNU MP bignum library" OFF)
-endif()
-if(WITH_GMP)
-  find_package(GMP)
-  if(GMP_FOUND)
-    target_link_libraries(GLPK PRIVATE GMP::gmp)
-  else()
-    message(FATAL_ERROR "gmp.h/libgmp not found")
-  endif()
+find_package(GMP)
+if(GMP_FOUND)
+  target_link_libraries(GLPK PRIVATE GMP::gmp)
+else()
+  message(WARNING "gmp.h/libgmp not found")
 endif()
 
 option(ODBC "enable MathProg ODBC support" OFF)
