remove cplex example due to missing external deps

--- a/examples/cplex/CMakeLists.txt
+++ b/examples/cplex/CMakeLists.txt
@@ -1,3 +1,6 @@
-include(examples)
+# This example folder requires external dependencies to build (see README)
+return()
 
-add_example_folder(${CMAKE_CURRENT_SOURCE_DIR})
+#include(examples)
+#
+#add_example_folder(${CMAKE_CURRENT_SOURCE_DIR})
