added missing define for MSVC builds, restructured system checks

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,12 +49,20 @@ add_custom_command(TARGET GLPK POST_BUILD
 
 # check system libs functions and headers
 
-# sys/time.h
-if(NOT MSVC)
+# define if windows environment
+if(MSVC)
+    target_compile_definitions(GLPK PUBLIC __WOE__=1)
+else()
+    # sys/time.h
     include(CheckIncludeFile)
     check_include_file(sys/time.h HAS_TIME_H)
     if(HAS_TIME_H)
-        add_compile_definitions(HAVE_SYS_TIME_H=1)
+        target_compile_definitions(GLPK PUBLIC HAVE_SYS_TIME_H=1)
+        include(CheckSymbolExists)
+        check_symbol_exists(gettimeofday sys/time.h HAVE_GETTIMEOFDAY_FUNC)
+        if(HAVE_GETTIMEOFDAY_FUNC)
+            target_compile_definitions(GLPK PUBLIC HAVE_GETTIMEOFDAY=1)
+        endif()
     endif()
 endif()
 if(HAS_TIME_H)
