missing libgmp now gives dev warning instead of warning

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,12 +65,14 @@ else()
         endif()
     endif()
 endif()
-if(HAS_TIME_H)
-    include(CheckSymbolExists)
-    check_symbol_exists(gettimeofday sys/time.h HAVE_GETTIMEOFDAY_FUNC)
-    if(HAVE_GETTIMEOFDAY_FUNC)
-        add_compile_definitions(HAVE_GETTIMEOFDAY=1)
-    endif()
+
+# libgmp/gmp.h
+find_package(GMP)
+if(GMP_FOUND)
+    target_link_libraries(GLPK PRIVATE GMP::gmp)
+    target_compile_definitions(GLPK PUBLIC HAVE_GMP=1)
+else()
+    message(AUTHOR_WARNING "gmp.h/libgmp not found")
 endif()
 
 #add_subdirectory(tests)
