now using ODBC::ODBC target as dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,8 +94,7 @@ if(ODBC)
     string(REGEX MATCH "/[^/\\]+$/gm" ODBC_LIB_NAME "${ODBC_LIBRARIES}") # regexr.com/698ls strips the preceding path from the actual lib name
     if (GMP_LIB_NAME)
       target_compile_definitions(GLPK PUBLIC ODBC_DLNAME=${ODBC_LIB_NAME})
-      target_link_libraries(GLPK ODBC_LIBRARIES)
-      target_include_directories(GLPK ODBC_INCLUDE_DIRS)
+      target_link_libraries(GLPK PRIVATE ODBC::ODBC)
     else()
       message(FATAL_ERROR "Could not determine ODBC/iODBC library name")
     endif()
