--- a/.github/workflows/amd64_linux.yml
+++ b/.github/workflows/amd64_linux.yml
@@ -1,23 +1,55 @@
+# ref: https://github.com/actions/runner-images
 name: amd64 Linux
 
-on:
-  push:
-  pull_request:
-  schedule:
-    # min hours day(month) month day(week)
-    - cron: '0 0 7,22 * *'
+on: [push, pull_request, workflow_dispatch]
 
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
+
+# Building using the github runner environement directly.
 jobs:
-  # Building using the github runner environement directly.
-  build-linux:
+  native:
+    strategy:
+      matrix:
+        cmake: [
+          {generator: "Unix Makefiles", config: "Release"},
+          {generator: "Ninja", config: "Release"},
+          {generator: "Ninja Multi-Config", config: "Release"},
+        ]
+      fail-fast: false
+    name: Linux•CMake(${{matrix.cmake.generator}})
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
-    - name: Build
-      run: cmake --build build --target all -v
-    - name: Test
-      run: cmake --build build --target test -v
-    - name: Install
-      run: cmake --build build --target install -v -- DESTDIR=install
+      - uses: actions/checkout@v4
+      - name: Install Ninja
+        run: |
+          sudo apt-get update
+          sudo apt-get install ninja-build
+      - name: Check cmake
+        run: cmake --version
+      - name: Configure
+        run: >
+          cmake -S. -Bbuild
+          -G "${{matrix.cmake.generator}}"
+          -DCMAKE_BUILD_TYPE="$BUILD_TYPE"
+          -DCMAKE_INSTALL_PREFIX=install
+      - name: Build
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target all
+          -v -j2
+      - name: Test
+        run: >
+          CTEST_OUTPUT_ON_FAILURE=1
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target test
+          -v
+      - name: Install
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target install
+          -v
