--- a/.github/workflows/amd64_macos.yml
+++ b/.github/workflows/amd64_macos.yml
@@ -1,39 +1,50 @@
-name: amd64 macOS
+# ref: https://github.com/actions/runner-images
+name: amd64 MacOS
 
-on:
-  push:
-  pull_request:
-  schedule:
-    # min hours day(month) month day(week)
-    - cron: '0 0 7,22 * *'
+on: [push, pull_request, workflow_dispatch]
 
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
+
+# Building using the github runner environement directly.
 jobs:
-  # Building using the github runner environement directly.
-  xcode:
-    runs-on: macos-latest
+  native:
+    strategy:
+      matrix:
+        cmake: [
+          {generator: "Xcode", config: Release, build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: install},
+          {generator: "Unix Makefiles", config: Release, build_target: all, test_target: test, install_target: install},
+        ]
+      fail-fast: false
+    name: MacOS•CMake(${{matrix.cmake.generator}})
+    runs-on: macos-13 # latest intel based macos runner
     steps:
-    - uses: actions/checkout@v2
-    - name: Check cmake
-      run: cmake --version
-    - name: Configure
-      run: cmake -S. -Bbuild -G "Xcode" -DCMAKE_CONFIGURATION_TYPES=Release
-    - name: Build
-      run: cmake --build build --config Release --target ALL_BUILD -v
-    - name: Test
-      run: cmake --build build --config Release --target RUN_TESTS -v
-    - name: Install
-      run: cmake --build build --config Release --target install -v
-  make:
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Check cmake
-      run: cmake --version
-    - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
-    - name: Build
-      run: cmake --build build --target all -v
-    - name: Test
-      run: cmake --build build --target test -v
-    - name: Install
-      run: cmake --build build --target install -v
+      - uses: actions/checkout@v4
+      - name: Check CMake
+        run: cmake --version
+      - name: Configure
+        run: >
+          cmake -S. -Bbuild
+          -G "${{matrix.cmake.generator}}"
+          -DCMAKE_BUILD_TYPE=${{matrix.cmake.config}}
+          -DCMAKE_INSTALL_PREFIX=install
+      - name: Build
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.build_target}}
+          -v -j2
+      - name: Test
+        run: >
+          CTEST_OUTPUT_ON_FAILURE=1
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.test_target}}
+          -v
+      - name: Install
+        run: >
+          cmake --build build
+          --config ${{matrix.cmake.config}}
+          --target ${{matrix.cmake.install_target}}
+          -v
