--- a/ci/docker/almalinux/Dockerfile
+++ b/ci/docker/almalinux/Dockerfile
@@ -1,12 +1,16 @@
 # Create a virtual environment with all tools installed
-# ref: https://hub.docker.com/_/archlinux/
-FROM archlinux:latest AS env
+# ref: https://hub.docker.com/_/almalinux
+FROM almalinux:latest AS env
 
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
-RUN pacman -Syu --noconfirm git base-devel cmake
+RUN dnf -y update \
+&& dnf -y install git wget openssl-devel cmake \
+&& dnf -y group install "Development Tools" \
+&& dnf clean all \
+&& rm -rf /var/cache/dnf
+CMD [ "/usr/bin/bash" ]
 
-# Add the library src to our build env
 FROM env AS devel
 WORKDIR /home/project
 COPY . .
