--- a/ci/docker/opensuse/Dockerfile
+++ b/ci/docker/opensuse/Dockerfile
@@ -1,10 +1,10 @@
 # Create a virtual environment with all tools installed
-# ref: https://hub.docker.com/r/opensuse/leap
-FROM opensuse/leap AS env
-LABEL maintainer="mizux.dev@gmail.com"
+# ref: https://hub.docker.com/r/opensuse/tumbleweed
+FROM opensuse/tumbleweed AS env
+
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
-RUN zypper update -y \
+RUN zypper refresh \
 && zypper install -y git patch gcc gcc-c++ cmake \
 && zypper clean -a
 ENV CC=gcc CXX=g++
@@ -15,17 +15,17 @@ WORKDIR /home/project
 COPY . .
 
 FROM devel AS build
-RUN cmake -version
-RUN cmake -S. -Bbuild
+RUN cmake --version
+RUN cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
 RUN cmake --build build --target all -v
 RUN cmake --build build --target install -v
 
 FROM build AS test
-RUN cmake --build build --target test -v
+RUN CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target test -v
 
 # Test install rules
 FROM env AS install_env
-COPY --from=build /usr/local /usr/local/
+COPY --from=build /usr/local/ /usr/local/
 
 FROM install_env AS install_devel
 WORKDIR /home/sample
@@ -36,4 +36,4 @@ RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
 
 FROM install_build AS install_test
-RUN cmake --build build --target test
+RUN CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target test -v
