--- a/.github/workflows/amd64_docker.yml
+++ b/.github/workflows/amd64_docker.yml
@@ -8,7 +8,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  Distros:
+  docker:
     strategy:
       matrix:
         #platform: [amd64, arm64, riscv64]
@@ -21,7 +21,8 @@ jobs:
           fedora,
           opensuse,
           rockylinux,
-          ubuntu]
+          ubuntu
+        ]
       fail-fast: false
     name: ${{matrix.platform}}•${{matrix.distro}}•CMake
     runs-on: ubuntu-latest
@@ -29,7 +30,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check docker
         run: |
-          docker version
           docker info
           docker buildx ls
       - name: Build env image
@@ -41,11 +41,17 @@ jobs:
       - name: Test project
         run: make --directory=ci ${{matrix.platform}}_${{matrix.distro}}_test
 
-      - name: Build Install env image
+      - name: Build install env image
         run: make --directory=ci ${{matrix.platform}}_${{matrix.distro}}_install_env
-      - name: Build Install devel image
+      - name: Build install devel image
         run: make --directory=ci ${{matrix.platform}}_${{matrix.distro}}_install_devel
-      - name: Build Install project
+      - name: Build install project
         run: make --directory=ci ${{matrix.platform}}_${{matrix.distro}}_install_build
-      - name: Test Install project
+      - name: Test install project
         run: make --directory=ci ${{matrix.platform}}_${{matrix.distro}}_install_test
+
+  amd64_docker_cmake:
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      - uses: actions/checkout@v4
