--- a/.github/workflows/amd64_linux.yml
+++ b/.github/workflows/amd64_linux.yml
@@ -26,13 +26,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install ninja-build
-      - name: Check cmake
+      - name: Check CMake
         run: cmake --version
       - name: Configure
         run: >
           cmake -S. -Bbuild
           -G "${{matrix.cmake.generator}}"
-          -DCMAKE_BUILD_TYPE="$BUILD_TYPE"
+          -DCMAKE_BUILD_TYPE=${{matrix.cmake.config}}
           -DCMAKE_INSTALL_PREFIX=install
       - name: Build
         run: >
@@ -53,3 +53,9 @@ jobs:
           --config ${{matrix.cmake.config}}
           --target install
           -v
+
+  amd64_linux_cmake:
+    runs-on: ubuntu-latest
+    needs: native
+    steps:
+      - uses: actions/checkout@v4
