--- a/.github/workflows/amd64_windows.yml
+++ b/.github/workflows/amd64_windows.yml
@@ -13,11 +13,14 @@ jobs:
     strategy:
       matrix:
         cmake: [
-          {name: "VS2022", generator: "Visual Studio 17 2022", config: Release, build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: INSTALL},
+          {name: "VS22", generator: "Visual Studio 17 2022", config: Release, build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: INSTALL},
+          {name: "VS22", generator: "Visual Studio 17 2022", config: Debug, build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: INSTALL},
         ]
       fail-fast: false
-    name: Windows•CMake(${{matrix.cmake.name}})
+    name: Windows•CMake(${{matrix.cmake.name}},${{matrix.cmake.config}})
     runs-on: windows-latest
+    env:
+      CTEST_OUTPUT_ON_FAILURE: 1
     steps:
       - uses: actions/checkout@v4
       - name: Check CMake
@@ -48,3 +51,9 @@ jobs:
           --config ${{matrix.cmake.config}}
           --target ${{matrix.cmake.install_target}}
           -v
+
+  amd64_windows_cmake:
+    runs-on: ubuntu-latest
+    needs: native
+    steps:
+      - uses: actions/checkout@v4
